demo-hybrid-logging/rosa/loki-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: loki-gateway-external
  namespace: openshift-logging
  annotations:
    haproxy.router.openshift.io/timeout: 10m
spec:
  host: loki-gateway.REPLACE_WITH_CLUSTER_DOMAIN
  port:
    targetPort: public
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: logging-loki-gateway-http
    weight: 100
